--- a/resources/main.ui
+++ b/resources/main.ui
@@ -65,7 +65,7 @@
        <widget class="QPushButton" name="btn_connect">
         <property name="minimumSize">
          <size>
-          <width>85</width>
+          <width>100</width>
           <height>0</height>
          </size>
         </property>
@@ -97,7 +97,7 @@
          <bool>true</bool>
         </property>
         <property name="placeholderText">
-         <string>the ssl file path here ...</string>
+         <string>the cert file path ...</string>
         </property>
        </widget>
       </item>
@@ -105,12 +105,12 @@
        <widget class="QPushButton" name="btn_browse_ssl_file">
         <property name="minimumSize">
          <size>
-          <width>85</width>
+          <width>100</width>
           <height>0</height>
          </size>
         </property>
         <property name="text">
-         <string>SELECT SSL</string>
+         <string>SELECT CERT</string>
         </property>
        </widget>
       </item>
@@ -352,7 +352,7 @@
      <x>0</x>
      <y>0</y>
      <width>722</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
