--- a/resources/main.ui
+++ b/resources/main.ui
@@ -53,6 +53,9 @@
           <height>0</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The websocket url that must be started with &lt;span style=&quot; font-weight:700;&quot;&gt;ws://...&lt;/span&gt; or &lt;span style=&quot; font-weight:700;&quot;&gt;wss://...&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="inputMethodHints">
          <set>Qt::ImhUrlCharactersOnly</set>
         </property>
@@ -69,6 +72,9 @@
           <height>0</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Perform connecting to websocket server&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
          <string>CONNECT</string>
         </property>
@@ -80,8 +86,11 @@
      <layout class="QHBoxLayout" name="horizontalLayout_ssl" stretch="0,1,0">
       <item>
        <widget class="QCheckBox" name="chk_auto_use_ssl_chains">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Automatically select and use &lt;span style=&quot; font-weight:700;&quot;&gt;self-signed&lt;/span&gt; or &lt;span style=&quot; font-weight:700;&quot;&gt;publicly-trusted-signed&lt;/span&gt; certification&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
-         <string>Automatically Use SSL Chains</string>
+         <string>Automatically SSL</string>
         </property>
        </widget>
       </item>
@@ -108,6 +117,9 @@
           <width>100</width>
           <height>0</height>
          </size>
+        </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Select a certification file (.pem, .crt, etc)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>SELECT CERT</string>
@@ -138,6 +150,9 @@
           <width>50</width>
           <height>16777215</height>
          </size>
+        </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The connecting time-out in seconds&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="inputMethodHints">
          <set>Qt::ImhNone</set>
@@ -191,6 +206,9 @@
           <pointsize>9</pointsize>
          </font>
         </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The messages that received from websocket server will be log here ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="alternatingRowColors">
          <bool>true</bool>
         </property>
@@ -215,6 +233,9 @@
             <height>16777215</height>
            </size>
           </property>
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Clear log&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>CLEAR</string>
           </property>
@@ -227,6 +248,9 @@
             <width>50</width>
             <height>16777215</height>
            </size>
+          </property>
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Save log to a text file&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
            <string>SAVE</string>
@@ -267,6 +291,9 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set message format as the text type&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
          <string>Text</string>
         </property>
@@ -280,6 +307,9 @@
       </item>
       <item>
        <widget class="QRadioButton" name="rb_message_hex">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set message format as the binary type&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
          <string>Binary (HEX)</string>
         </property>
@@ -321,6 +351,9 @@
           <pointsize>9</pointsize>
          </font>
         </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter your message here ...&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="placeholderText">
          <string>enter message here ...</string>
         </property>
@@ -337,6 +370,9 @@
           <height>70</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Send message to websocket server&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
         <property name="text">
          <string>SEND</string>
         </property>
@@ -352,7 +388,7 @@
      <x>0</x>
      <y>0</y>
      <width>722</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
