--- a/resources/main.ui
+++ b/resources/main.ui
@@ -388,7 +388,7 @@
      <x>0</x>
      <y>0</y>
      <width>722</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -434,7 +434,9 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
  <buttongroups>
   <buttongroup name="buttonGroup_message"/>
