--- a/resources/main.ui
+++ b/resources/main.ui
@@ -37,7 +37,7 @@
        <enum>Qt::Vertical</enum>
       </property>
       <widget class="QWidget" name="layoutWidget">
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,1,0,0,0,0,0">
+       <layout class="QVBoxLayout" name="verticalLayout_main_group" stretch="0,0,0,0,0,0,0,0,1,0,0,0,0,0">
         <property name="leftMargin">
          <number>6</number>
         </property>
@@ -380,7 +380,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_5">
+         <widget class="QLabel" name="label_data_logging">
           <property name="text">
            <string>Data Logging</string>
           </property>
@@ -481,7 +481,7 @@
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout">
+         <layout class="QHBoxLayout" name="horizontalLayout_message_types">
           <item>
            <widget class="QRadioButton" name="rb_message_text">
             <property name="maximumSize">
@@ -520,7 +520,7 @@
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_message" stretch="1,0">
+         <layout class="QHBoxLayout" name="horizontalLayout_message_send" stretch="1,0">
           <item>
            <widget class="QPlainTextEdit" name="txt_message">
             <property name="enabled">
